--- a/DatingApp/appsettings.Development.json
+++ b/DatingApp/appsettings.Development.json
@@ -9,5 +9,10 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "CloudinarySettings": {
+    "CloudName": "mughees-ashraf",
+    "ApiKey": "885281124754656",
+    "ApiSecret": "Jv7F00PTX_2a7-gTNvWCyuW8v-w"
   }
 }
